apps/base/pihole/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
  namespace: pihole
  labels:
    app: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: admin
    port: 80
    protocol: TCP
