apps/base/pihole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  labels:
    app: pihole
  annotations:
    lbipam.cilium.io/ip-pool: single-node-pool
    lbipam.cilium.io/sharing-cross-namespace: default,pihole
    lbipam.cilium.io/sharing-key: homelab
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    # - name: dns-tcp
    #   port: 53
    #   protocol: TCP
