apps/base/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: admin
    port: 80
    protocol: TCP
  # - name: dns-tcp
  #   port: 53
  #   protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
