apps/base/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pihole-admin
  namespace: pihole
spec:
  hostnames:
    - pihole.burntbytes.com # match requests for app2.example.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - backendRefs:
      - name: pihole-admin
        port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: pihole-dns-tcp
#   namespace: pihole
# spec:
#   hostnames:
#     - pihole.burntbytes.com # match requests for app2.example.com
#   parentRefs:
#     - name: app-gateway-staging
#       namespace: default
#       sectionName: dns-tcp
#   rules:
#     - backendRefs:
#       - name: pihole
#         port: 53
